@@ -1,5 +1,5 @@
-26fb1d174d7837a1a090d35b9ffff869 *ChangeLog
-556398539ed0d64e0786928909d47ec7 *DESCRIPTION
+ef26aa36bbd33ac18ee31da76421d27c *ChangeLog
+5ddbdd1ad5925aab35764cfc895bc7bf *DESCRIPTION
 feb0fc00ca3c5a93ca6acea00eaafd88 *NAMESPACE
 4077023e9f95fd378e6c3f74629bbaeb *R/AES.R
 95a0d756c48a850cab56c1ad85a1d92f *R/digest.R
@@ -7,8 +7,8 @@ feb0fc00ca3c5a93ca6acea00eaafd88 *NAMESPACE
 018a0f4dae8432e6bf3c8e69fca7c0db *cleanup
 b234ee4d69f5fce4486a80fdaf4a4263 *inst/GPL-2
 8a699d1c9a0c7b6458eb19da3a3bb716 *man/AES.Rd
-4dc8364da73aa5de1a6b569acbc0bc57 *man/digest.Rd
-d40b91912cf065bcaf25fc5a23106e75 *man/hmac.Rd
+367b70a4e7d06de9f02dda27577033e2 *man/digest.Rd
+315612ff57cd9c880423c6aea27519dd *man/hmac.Rd
 0817cfd8e7791f667a53297b00ea430a *src/aes.c
 12398d282dd19894ed5548fc55fff7c4 *src/aes.h
 76552de67b8cbff2a1fcd27499dc5710 *src/crc32.c
@@ -20,7 +20,7 @@ b67492e514895c1e1f9738a8cb49313d *src/md5.c
 2212ffe253fda0b122c209ae4e220c71 *src/sha1.c
 7cf279b5c8a6743e49a2c37d105733f5 *src/sha1.h
 cab7d3113bd783c5c7ea50ab199845bb *src/sha2.c
-b4953c9201a6fe1f8afaadc72f808f2c *src/sha2.h
+9fb42f8ccf7cc828d0548a3b59df3ae9 *src/sha2.h
 09bd03b1477769049a825ad980a88591 *src/sha256.c
 82a758ff49a4a2c5dfc82852d57f9a44 *src/sha256.h
 9f96783529fb4458a873ed787b5d2630 *src/zconf.h
